Fix minor issue with spacing of chart titles

--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -165,7 +165,7 @@ h5 {
 
 h5.chart-subtitle {
   font-weight: normal;
-  // padding: 0;
+  padding: 0;
 }
 
 .font-xsmall,
